Fix overflow on experience

--- a/_sass/site/_skills.scss
+++ b/_sass/site/_skills.scss
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    overflow-x: hidden;
   }
 
   .section-header {
